force-app/main/default/objects/ProposalPending__c/ProposalPending__c.object-meta.xml
<CustomObject>
    <label>Pendência de Proposta</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Pendência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pendências de Proposta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>