force-app/main/default/objects/ProposalPending__c/fields/FileUrl__c.field-meta.xml
<CustomField>
    <fullName>FileUrl__c</fullName>
    <label>URL do Arquivo</label>
    <type>Url</type>
</CustomField>