force-app/main/default/objects/ProposalPending__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pendências</relationshipLabel>
    <relationshipName>ProposalPendings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>