force-app/main/default/objects/ProposalPending__c/fields/RespondedDate__c.field-meta.xml
<CustomField>
    <fullName>RespondedDate__c</fullName>
    <label>Data de Resposta</label>
    <type>DateTime</type>
</CustomField>