force-app/main/default/objects/ProposalPending__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Resposta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>